improving structure and documentation of the scripts

--- a/scripts/1_reorganize-noscemus-directories.ipynb
+++ b/scripts/1_reorganize-noscemus-directories.ipynb
@@ -1,40 +1,36 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "b77bbb44a71d1ae8",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-11-02T12:05:09.872852Z",
-     "start_time": "2023-11-02T12:05:09.863105Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "import pandas as pd\n",
-    "import spacy\n",
-    "import sddk\n",
-    "import requests\n",
-    "import pickle"
-   ]
+    "# Description\n",
+    "The textual data, as we obtained them from the developers of Noscemus, have the structure that each individual work is represented by a singular text file with the name of the author, name of the work, and place and year of publication (e.g. `Bacon,_Francis_-_Instauratio_magna__London_1620.pdf.txt`). Within the original folder structure, each of these works is contained in is in its own directory, named by its \"Digital sourcebook\" ID (e.g. `1031760`). This makes any iteration over the text files not that much straightforward. Therefore, in this notebook, we reorganize and rename the files in the way that we create one big directory, in which each work is represented by one text file named by its ID `1031760.txt`. These IDs we can later on easily map on the metadata. \n",
+    "\n",
+    "INPUT: \"NOSCEMUS_FULL\" subdirectory on sciencedata (raw data as we got them from noscemus)\n",
+    "OUTPUT: \"noscemus_raw\" subdirectory on sciencedata (reorganized raw data files from noscemus)\n",
+    "OUTPUT: \"../data/ids_filenames_df.csv\" table mapping on each othe the \"Digital sourcebook\" IDs (e.g. `1031760`) and original names of the raw text files (e.g. `Bacon,_Francis_-_Instauratio_magna__London_1620.pdf.txt`) - we later map it on other metadata\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "87768ea609bf6d1b"
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "nlp = spacy.load('la_core_web_lg')"
+    "import pandas as pd\n",
+    "import sddk"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-02T08:22:24.748515Z",
-     "start_time": "2023-11-02T08:22:24.127998Z"
+     "end_time": "2023-11-30T09:58:37.368985Z",
+     "start_time": "2023-11-30T09:58:36.695956Z"
     }
    },
-   "id": "initial_id"
+   "id": "b77bbb44a71d1ae8"
   },
   {
    "cell_type": "code",
@@ -50,6 +46,7 @@
     }
    ],
    "source": [
+    "# we keep the data on a shared folder on sciencedata.dk\n",
     "s = sddk.cloudSession(provider=\"sciencedata.dk\", shared_folder_name=\"TOME/DATA/NOSCEMUS\", owner=\"kase@zcu.cz\")"
    ],
    "metadata": {
@@ -75,6 +72,10 @@
     }
    ],
    "source": [
+    "# in the \"NOSCEMUS_FULL\" directory we got, each individual work is in its own directory (named by its ID), what makes the navigation not that much straightforward\n",
+    "# there\n",
+    "\n",
+    "\n",
     "dir_ids_list = s.list_directories(\"NOSCEMUS_FULL/\")\n",
     "dir_ids_list[:10]"
    ],
@@ -163,16 +164,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ids_filenames_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mids_filenames_df\u001B[49m\u001B[38;5;241m.\u001B[39mto_csv(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m../data/ids_filenames_df.csv\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'ids_filenames_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "ids_filenames_df.to_csv(\"../data/ids_filenames_df.csv\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-03T08:58:02.366329Z",
-     "start_time": "2023-11-03T08:58:02.358279Z"
+     "end_time": "2023-11-30T09:52:08.352527Z",
+     "start_time": "2023-11-30T09:52:08.254291Z"
     }
    },
    "id": "9be5ab81075bf163"
