--- a/scripts/2_noscemus-spacy-preprocess.ipynb
+++ b/scripts/2_noscemus-spacy-preprocess.ipynb
@@ -3,28 +3,22 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Spacy"
+    "# Description\n",
+    "\n",
+    "In this notebookm we employ `latincy` (SpaCy NLP model for latin  - see Burns, P. J. (2023). LatinCy: Synthetic Trained Pipelines for Latin NLP. https://doi.org/10.48550/ARXIV.2305.04365\n",
+    ") to make an automatic (neural-networks driven) language annotation of all texts in noscemus. To improve the results, we first do some cleaning of the texts. We also have to develop a specific approach to deal with large text files, which cannot be processed by SpaCy at once.\n",
+    "\n",
+    "* INPUT: text files in the \"noscemus_raw\" subdirectory on sciencedata\n",
+    "* OUTPUT: json files in the \"noscemus_spacyjsons_v1\" subdirectory on sciencedata (WARNING: large folder, more than 20 GB in total) "
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "c4cc8098de77557c"
+   "id": "566b19ef31a827cc"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "###  pip install https://huggingface.co/latincy/la_core_web_lg/resolve/main/la_core_web_lg-any-py3-none-any.whl"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "a6cb7f7fd20eab61"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import spacy\n",
@@ -37,156 +31,89 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T14:20:03.797157Z",
-     "start_time": "2023-11-06T14:20:01.854617Z"
+     "start_time": "2023-11-30T09:35:45.103434Z"
     }
    },
    "id": "e0ce4f34f4f582c3"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Spacy setup"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c4cc8098de77557c"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spacy.prefer_gpu()"
+    "spacy.prefer_gpu() # check whether the gpu is on"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T14:20:03.803637Z",
-     "start_time": "2023-11-06T14:20:03.799269Z"
+     "end_time": "2023-11-30T09:35:46.635316Z",
+     "start_time": "2023-11-30T09:35:46.623046Z"
     }
    },
    "id": "ec4218d8f7a4bf96"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "nlp = spacy.load('la_core_web_lg')"
+    "# for the following to work the model has to be previously installed:\n",
+    "# !pip install https://huggingface.co/latincy/la_core_web_lg/resolve/main/la_core_web_lg-any-py3-none-any.whl\n",
+    "\n",
+    "nlp = spacy.load('la_core_web_lg') "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T14:20:04.420683Z",
-     "start_time": "2023-11-06T14:20:03.802196Z"
+     "end_time": "2023-11-30T09:36:27.060035Z",
+     "start_time": "2023-11-30T09:36:26.385231Z"
     }
    },
    "id": "9c0a5b1532dba641"
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "1000000"
      },
-     "execution_count": 79,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nlp.max_length"
+    "nlp.max_length # the maximal number of characters an input document can contain to be processed  "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T13:49:39.016149Z",
-     "start_time": "2023-11-07T13:49:38.974881Z"
+     "end_time": "2023-11-30T09:36:27.066399Z",
+     "start_time": "2023-11-30T09:36:27.061887Z"
     }
    },
    "id": "660e4b488203ea76"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "   Unnamed: 0       id                                     filenames_list\n0           0  1031760  ['Bacon,_Francis_-_Instauratio_magna__London_1...\n1           1  1085290  ['Linden,_Johannes_Antonides_van_der_-_Lindeni...\n2           2  1285853  ['de_Conde,_Ioannes_Baptista_-_Aphorismi_seu_a...\n3           3  1285854  ['van_Poort,_Henricus_-_Hippocratis_Aphorismi_...\n4           4  1285855  ['Hippocrates_&_Denisot,_Gérard_-_Hippocratis_...",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>id</th>\n      <th>filenames_list</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>1031760</td>\n      <td>['Bacon,_Francis_-_Instauratio_magna__London_1...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1085290</td>\n      <td>['Linden,_Johannes_Antonides_van_der_-_Lindeni...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>1285853</td>\n      <td>['de_Conde,_Ioannes_Baptista_-_Aphorismi_seu_a...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>1285854</td>\n      <td>['van_Poort,_Henricus_-_Hippocratis_Aphorismi_...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>1285855</td>\n      <td>['Hippocrates_&amp;_Denisot,_Gérard_-_Hippocratis_...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ids_filenames_df = pd.read_csv(\"../data/ids_filenames_df.csv\")\n",
-    "ids_filenames_df.head(5)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-07T13:50:32.594117Z",
-     "start_time": "2023-11-07T13:50:32.549742Z"
-    }
-   },
-   "id": "cf5610b8275e53a1"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "1    ['Linden,_Johannes_Antonides_van_der_-_Lindeni...\nName: filenames_list, dtype: object"
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ids_filenames_df[ids_filenames_df[\"id\"]==1085290][\"filenames_list\"]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-07T13:50:33.251297Z",
-     "start_time": "2023-11-07T13:50:33.239846Z"
-    }
-   },
-   "id": "2b4f7da26d9dc25d"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "         Unnamed: 0                                     filenames_list\nid                                                                    \n1031760           0  ['Bacon,_Francis_-_Instauratio_magna__London_1...\n1085290           1  ['Linden,_Johannes_Antonides_van_der_-_Lindeni...\n1285853           2  ['de_Conde,_Ioannes_Baptista_-_Aphorismi_seu_a...\n1285854           3  ['van_Poort,_Henricus_-_Hippocratis_Aphorismi_...\n1285855           4  ['Hippocrates_&_Denisot,_Gérard_-_Hippocratis_...",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>filenames_list</th>\n    </tr>\n    <tr>\n      <th>id</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1031760</th>\n      <td>0</td>\n      <td>['Bacon,_Francis_-_Instauratio_magna__London_1...</td>\n    </tr>\n    <tr>\n      <th>1085290</th>\n      <td>1</td>\n      <td>['Linden,_Johannes_Antonides_van_der_-_Lindeni...</td>\n    </tr>\n    <tr>\n      <th>1285853</th>\n      <td>2</td>\n      <td>['de_Conde,_Ioannes_Baptista_-_Aphorismi_seu_a...</td>\n    </tr>\n    <tr>\n      <th>1285854</th>\n      <td>3</td>\n      <td>['van_Poort,_Henricus_-_Hippocratis_Aphorismi_...</td>\n    </tr>\n    <tr>\n      <th>1285855</th>\n      <td>4</td>\n      <td>['Hippocrates_&amp;_Denisot,_Gérard_-_Hippocratis_...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ids_filenames_df.set_index(\"id\", inplace=True)\n",
-    "ids_filenames_df.head(5)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-07T13:51:17.798438Z",
-     "start_time": "2023-11-07T13:51:17.765069Z"
-    }
-   },
-   "id": "d0ca2d1528d5aff3"
   },
   {
    "cell_type": "markdown",
@@ -197,22 +124,6 @@
     "collapsed": false
    },
    "id": "b43330a230a2ff84"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "outputs": [],
-   "source": [
-    "vitruvius = \"Architecti Augusti est scientia pluribus disciplinis et variis eruditionibus ornata, quae ab ceteris artibus perficiuntur. Opera ea nascitur et fabrica et ratiocinatione.\""
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-07T13:55:22.139660Z",
-     "start_time": "2023-11-07T13:55:22.118338Z"
-    }
-   },
-   "id": "893dfae9c690b086"
   },
   {
    "cell_type": "code",
@@ -228,6 +139,7 @@
     }
    ],
    "source": [
+    "# what elements are in the pipeline?\n",
     "nlp.pipeline"
    ],
    "metadata": {
@@ -238,6 +150,22 @@
     }
    },
    "id": "78b894b2e11f2c5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "outputs": [],
+   "source": [
+    "# check the functionilty with one famous classical texts\n",
+    "vitruvius = \"Architecti Augusti est scientia pluribus disciplinis et variis eruditionibus ornata, quae ab ceteris artibus perficiuntur. Opera ea nascitur et fabrica et ratiocinatione.\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-07T13:55:22.118338Z"
+    }
+   },
+   "id": "893dfae9c690b086"
   },
   {
    "cell_type": "code",
@@ -2864,7 +2792,7 @@
     "        print(n)\n",
     "    try:\n",
     "        new_filename = filename.partition(\".\")[0] + \".json\"\n",
-    "        if new_filename not in jsonfiles_list:\n",
+    "        if new_filename not in jsonfiles_list: # if the file is NOT in the files we already generated in the previous iteration of the script...\n",
     "            rawtext = s.read_file(\"noscemus_raw/\" + filename, \"str\")\n",
     "            doc = from_rawtext_to_doc(rawtext)\n",
     "            doc_json = doc.to_json()\n",
