--- a/scripts/3_metadata-scraping.ipynb
+++ b/scripts/3_metadata-scraping.ipynb
@@ -4,11 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Noscemus_ETF metadata extraction notebook\n",
-    "- Run every cell in notebook\n",
-    "- After that there should be a Pandas DataFrame \"metadata_tabulka\" containing metadata from all 994 works in the Noscemus corpus.\n",
-    "- The 1st row of the dataset is comprised of column headers. There is 26 columns, but only first 15 have headers. Data from 16th column onward are comprised from Noscemus internal notes.\n",
-    "- Last cell can also export .csv file which will contain all data. You will be prompted for desired location of that .csv file. Example \"~/Documents/noscemus_metadata.csv\""
+    "# Description\n",
+    "\n",
+    "In this notebook, we extract all metadata information about individual works in noscemus from https://wiki.uibk.ac.at/noscemus/Category:Works\n",
+    "\n",
+    "* INPUT: webpages of individual works on https://wiki.uibk.ac.at/noscemus/Category:Works\n",
+    "* OUTPUT: tabular data in one CSV file: `../data/noscemus_metadata.csv`"
    ]
   },
   {
