improving structure and documentation of the scripts

--- a/scripts/5_lemmata-extraction.ipynb
+++ b/scripts/5_lemmata-extraction.ipynb
@@ -180,15 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "doc = filename_to_doc(jsonfiles_list[1])"
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2023-11-30T22:05:31.870050Z",
      "start_time": "2023-11-30T22:03:43.230549Z"
     }
    },
