cleaning stuff aroundL

--- a/scripts/8_fasttext-training.ipynb
+++ b/scripts/8_fasttext-training.ipynb
@@ -2,22 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from gensim.models.fasttext import FastText\n",
     "from gensim.models import KeyedVectors\n",
-    "import re"
+    "import re\n",
+    "import os\n",
+    "import shutil\n",
+    "import sddk"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-01T14:39:00.360731Z",
-     "start_time": "2023-12-01T14:38:59.697584Z"
+     "end_time": "2023-12-11T10:58:39.833675Z",
+     "start_time": "2023-12-11T10:58:39.310403Z"
     }
    },
    "id": "b0c3f2cfd2ca6805"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "connection with shared folder established with you as its ordinary user\n",
+      "endpoint variable has been configured to: https://sciencedata.dk/sharingout/kase%40zcu.cz/TOME/DATA/NOSCEMUS/\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = sddk.cloudSession(provider=\"sciencedata.dk\", shared_folder_name=\"TOME/DATA/NOSCEMUS\", owner=\"kase@zcu.cz\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T10:58:50.829297Z",
+     "start_time": "2023-12-11T10:58:41.078584Z"
+    }
+   },
+   "id": "e733e4abbe83f6aa"
   },
   {
    "cell_type": "code",
@@ -265,6 +293,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "os.mkdir(\"../data/large_data/vectors/\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T10:54:49.853889Z",
+     "start_time": "2023-12-11T10:54:49.847614Z"
+    }
+   },
+   "id": "2bbe8a3ebc3a637"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "outputs": [
     {
@@ -294,6 +338,14 @@
    "id": "34d32735e819f3aa"
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "89190d88e6790ab6"
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "outputs": [
@@ -321,7 +373,7 @@
     "    model.build_vocab_from_freq(word_freq=vocab_freqs)\n",
     "    model.train(corpus, total_examples=len([s for s in corpus]), epochs=model.epochs)\n",
     "    print(\"model for the period {} successfully trained.\".format(per_str))\n",
-    "    model.wv.save(\"../data/large_data/vectors_{}.wv\".format(per_str))"
+    "    model.wv.save(\"../data/large_data/vectors/vectors_{}.wv\".format(per_str))"
    ],
    "metadata": {
     "collapsed": false,
@@ -334,28 +386,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "[('caldarium', 0.6472269296646118),\n ('impono', 0.6223195791244507),\n ('mortarium', 0.6135668754577637),\n ('aerarium', 0.6014273762702942),\n ('ordinarius', 0.5862603783607483),\n ('aenarius', 0.5794419050216675),\n ('scalptura', 0.5685241222381592),\n ('paro', 0.5677451491355896),\n ('preciosus', 0.5658894777297974),\n ('statua', 0.5656430125236511)]"
+      "text/plain": "'/Users/vojtechkase/Projects/noscemus_ETF/data/large_data/vectors.zip'"
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.wv.most_similar(\"seminarium\")"
+    "shutil.make_archive(\"../data/large_data/vectors\", 'zip', \"../data/large_data/vectors\") #"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-04T13:20:10.265890Z",
-     "start_time": "2023-12-04T13:20:10.170783Z"
+     "end_time": "2023-12-11T10:57:23.743558Z",
+     "start_time": "2023-12-11T10:55:28.580509Z"
     }
    },
-   "id": "578849750cef00f4"
+   "id": "a53f5193283e0fa6"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<Response [201]>"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.s.put(\"https://sciencedata.dk/sharingout/kase%40zcu.cz/TOME/DATA/NOSCEMUS/vectors.zip\", data=open(\"../data/large_data/vectors.zip\", \"rb\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T11:01:06.898040Z",
+     "start_time": "2023-12-11T10:59:52.606219Z"
+    }
+   },
+   "id": "e123fed450a9a7f5"
   },
   {
    "cell_type": "code",
@@ -365,7 +442,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "a53f5193283e0fa6"
+   "id": "9cc9d51280cb9cad"
   }
  ],
  "metadata": {
