downloading data commands added

--- a/scripts/6_metadata&vocabularies-explorations.ipynb
+++ b/scripts/6_metadata&vocabularies-explorations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -23,8 +23,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-05T23:34:54.577304Z",
-     "start_time": "2023-12-05T23:34:54.121575Z"
+     "end_time": "2023-12-12T12:17:19.908978Z",
+     "start_time": "2023-12-12T12:17:19.126221Z"
     }
    },
    "id": "b32c4cab428524ee"
@@ -227,6 +227,25 @@
     }
    },
    "id": "c80d788ce221006d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "#!curl https://sciencedata.dk/public/87394f685b79e7f1ebd4a7ead2b4941c/sents_lemmata.zip -o ../data/large_data/sents_lemmata.zip\n",
+    "#!curl https://sciencedata.dk/public/87394f685b79e7f1ebd4a7ead2b4941c/sents_pos.zip -o ../data/large_data/sents_pos.zip\n",
+    "# shutil.unpack_archive(\"../data/large_data/sents_lemmata.zip\", \"../data/large_data/sents_lemmata\")\n",
+    "# shutil.unpack_archive(\"../data/large_data/sents_pos.zip\", \"../data/large_data/sents_pos\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-12T12:20:42.901663Z",
+     "start_time": "2023-12-12T12:20:41.946062Z"
+    }
+   },
+   "id": "1e306bda7b2ee8fe"
   },
   {
    "cell_type": "code",
