--- a/scripts/corpus-corporum-test.ipynb
+++ b/scripts/corpus-corporum-test.ipynb
@@ -567,6 +567,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "7142.857142857143"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "500000000 / 70000"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:38:49.389476Z",
+     "start_time": "2023-12-11T15:38:49.383521Z"
+    }
+   },
+   "id": "6fb8b716ce976a2b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3e5aae02bdcbac37"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 63,
    "outputs": [],
    "source": [
