--- a/scripts/2_noscemus-spacy-preprocess.ipynb
+++ b/scripts/2_noscemus-spacy-preprocess.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import spacy\n",
@@ -31,7 +31,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-11-30T09:35:45.103434Z"
+     "end_time": "2023-12-19T10:00:01.556975Z",
+     "start_time": "2023-12-19T09:59:54.413199Z"
     }
    },
    "id": "e0ce4f34f4f582c3"
@@ -316,6 +317,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "s =  sddk.cloudSession(public_folder_url=\"https://sciencedata.dk/public/87394f685b79e7f1ebd4a7ead2b4941c/\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-19T10:00:48.734967Z",
+     "start_time": "2023-12-19T10:00:48.723239Z"
+    }
+   },
+   "id": "97c61720b1075454"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 97,
    "outputs": [
     {
@@ -328,7 +345,7 @@
     }
    ],
    "source": [
-    "s = sddk.cloudSession(provider=\"sciencedata.dk\", shared_folder_name=\"TOME/DATA/NOSCEMUS\", owner=\"kase@zcu.cz\")"
+    "# s = sddk.cloudSession(provider=\"sciencedata.dk\", shared_folder_name=\"TOME/DATA/NOSCEMUS\", owner=\"kase@zcu.cz\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -357,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# extract a list of ids for iteration\n",
@@ -366,21 +383,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T14:00:47.092502Z",
-     "start_time": "2023-11-07T14:00:45.924253Z"
+     "end_time": "2023-12-19T10:00:39.388570Z",
+     "start_time": "2023-12-19T10:00:38.335082Z"
     }
    },
    "id": "69ed530b6d94fd09"
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "['1031760.txt',\n '1085290.txt',\n '1285853.txt',\n '1285854.txt',\n '1285855.txt',\n '1285856.txt',\n '1365811.txt',\n '1370560.txt',\n '1378359.txt',\n '1424044.txt']"
      },
-     "execution_count": 100,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,8 +408,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T14:00:47.099704Z",
-     "start_time": "2023-11-07T14:00:47.094309Z"
+     "end_time": "2023-12-19T10:00:40.120972Z",
+     "start_time": "2023-12-19T10:00:40.098383Z"
     }
    },
    "id": "558597355b6a3a1a"
