in the middle of being able to extract all contexts for each lemma in the vocabulary

--- a/scripts/2_noscemus-spacy-preprocess.ipynb
+++ b/scripts/2_noscemus-spacy-preprocess.ipynb
@@ -5,8 +5,7 @@
    "source": [
     "# Description\n",
     "\n",
-    "In this notebookm we employ `latincy` (SpaCy NLP model for latin  - see Burns, P. J. (2023). LatinCy: Synthetic Trained Pipelines for Latin NLP. https://doi.org/10.48550/ARXIV.2305.04365\n",
-    ") to make an automatic (neural-networks driven) language annotation of all texts in noscemus. To improve the results, we first do some cleaning of the texts. We also have to develop a specific approach to deal with large text files, which cannot be processed by SpaCy at once.\n",
+    "In this notebookm we employ `latincy` (SpaCy NLP model for latin  - see Burns, P. J. (2023). LatinCy: Synthetic Trained Pipelines for Latin NLP. https://doi.org/10.48550/ARXIV.2305.04365) to make an automatic (neural-networks driven) language annotation of all texts in noscemus. To improve the results, we first do some cleaning of the texts. We also have to develop a specific approach to deal with large text files, which cannot be processed by SpaCy at once.\n",
     "\n",
     "* INPUT: text files in the \"noscemus_raw\" subdirectory on sciencedata\n",
     "* OUTPUT: json files in the \"noscemus_spacyjsons_v1\" subdirectory on sciencedata (WARNING: large folder, more than 20 GB in total) "
@@ -18,7 +17,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "outputs": [],
    "source": [
     "import spacy\n",
@@ -31,11 +29,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-19T10:00:01.556975Z",
-     "start_time": "2023-12-19T09:59:54.413199Z"
+     "end_time": "2024-01-30T13:03:24.696526Z",
+     "start_time": "2024-01-30T13:03:17.485251Z"
     }
    },
-   "id": "e0ce4f34f4f582c3"
+   "id": "e0ce4f34f4f582c3",
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -49,15 +48,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "True"
+      "text/plain": [
+       "True"
+      ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 2
     }
    ],
    "source": [
@@ -66,15 +66,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T09:35:46.635316Z",
-     "start_time": "2023-11-30T09:35:46.623046Z"
+     "end_time": "2024-01-30T13:03:24.704545Z",
+     "start_time": "2024-01-30T13:03:24.699283Z"
     }
    },
-   "id": "ec4218d8f7a4bf96"
+   "id": "ec4218d8f7a4bf96",
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "outputs": [],
    "source": [
     "# for the following to work the model has to be previously installed:\n",
@@ -85,23 +85,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T09:36:27.060035Z",
-     "start_time": "2023-11-30T09:36:26.385231Z"
+     "end_time": "2024-01-30T13:03:25.735186Z",
+     "start_time": "2024-01-30T13:03:24.702352Z"
     }
    },
-   "id": "9c0a5b1532dba641"
+   "id": "9c0a5b1532dba641",
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "1000000"
+      "text/plain": [
+       "1000000"
+      ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 4
     }
    ],
    "source": [
@@ -110,11 +112,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T09:36:27.066399Z",
-     "start_time": "2023-11-30T09:36:27.061887Z"
+     "end_time": "2024-01-30T13:03:25.738042Z",
+     "start_time": "2024-01-30T13:03:25.734806Z"
     }
    },
-   "id": "660e4b488203ea76"
+   "id": "660e4b488203ea76",
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -128,15 +131,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
    "outputs": [
     {
      "data": {
-      "text/plain": "[('normer', <function la_core_web_lg.functions.normer(doc)>),\n ('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x14c335ba0>),\n ('tagger', <spacy.pipeline.tagger.Tagger at 0x14c336e00>),\n ('morphologizer',\n  <spacy.pipeline.morphologizer.Morphologizer at 0x14c335f60>),\n ('trainable_lemmatizer',\n  <spacy.pipeline.edit_tree_lemmatizer.EditTreeLemmatizer at 0x14c336b00>),\n ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x14c301a10>),\n ('lemma_fixer', <function la_core_web_lg.functions.lemma_fixer(doc)>),\n ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x14c301930>)]"
+      "text/plain": [
+       "[('normer', <function la_core_web_lg.functions.normer(doc)>),\n",
+       " ('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x2d40ee680>),\n",
+       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x2d40ee5c0>),\n",
+       " ('morphologizer',\n",
+       "  <spacy.pipeline.morphologizer.Morphologizer at 0x2d40ee8c0>),\n",
+       " ('trainable_lemmatizer',\n",
+       "  <spacy.pipeline.edit_tree_lemmatizer.EditTreeLemmatizer at 0x2d40ee500>),\n",
+       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x2d411cf20>),\n",
+       " ('lemma_fixer', <function la_core_web_lg.functions.lemma_fixer(doc)>),\n",
+       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x2d411d150>)]"
+      ]
      },
-     "execution_count": 89,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 5
     }
    ],
    "source": [
@@ -146,15 +159,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T13:55:23.996027Z",
-     "start_time": "2023-11-07T13:55:23.963804Z"
+     "end_time": "2024-01-30T13:03:25.747155Z",
+     "start_time": "2024-01-30T13:03:25.737737Z"
     }
    },
-   "id": "78b894b2e11f2c5"
+   "id": "78b894b2e11f2c5",
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
    "outputs": [],
    "source": [
     "# check the functionilty with one famous classical texts\n",
@@ -163,14 +176,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-11-07T13:55:22.118338Z"
+     "end_time": "2024-01-30T13:03:29.398781Z",
+     "start_time": "2024-01-30T13:03:29.388346Z"
     }
    },
-   "id": "893dfae9c690b086"
+   "id": "893dfae9c690b086",
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
    "outputs": [],
    "source": [
     "doc = nlp(vitruvius)"
@@ -178,11 +192,190 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T13:55:25.393682Z",
-     "start_time": "2023-11-07T13:55:25.359276Z"
+     "end_time": "2024-01-30T13:03:29.827379Z",
+     "start_time": "2024-01-30T13:03:29.802159Z"
     }
    },
-   "id": "b6ee2425d50e7ceb"
+   "id": "b6ee2425d50e7ceb",
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-30T13:04:59.484904Z",
+     "start_time": "2024-01-30T13:04:59.461879Z"
+    }
+   },
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token: Architecti\n",
+      "Lemma: Architectus\n",
+      "Part of Speech: PROPN\n",
+      "Is Stop Word: False\n",
+      "Dependency: ROOT\n",
+      "------\n",
+      "Token: Augusti\n",
+      "Lemma: Augustus\n",
+      "Part of Speech: PROPN\n",
+      "Is Stop Word: False\n",
+      "Dependency: nmod\n",
+      "------\n",
+      "Token: est\n",
+      "Lemma: sum\n",
+      "Part of Speech: AUX\n",
+      "Is Stop Word: True\n",
+      "Dependency: cop\n",
+      "------\n",
+      "Token: scientia\n",
+      "Lemma: scientia\n",
+      "Part of Speech: NOUN\n",
+      "Is Stop Word: False\n",
+      "Dependency: nsubj\n",
+      "------\n",
+      "Token: pluribus\n",
+      "Lemma: multus\n",
+      "Part of Speech: ADJ\n",
+      "Is Stop Word: False\n",
+      "Dependency: det\n",
+      "------\n",
+      "Token: disciplinis\n",
+      "Lemma: disciplina\n",
+      "Part of Speech: NOUN\n",
+      "Is Stop Word: False\n",
+      "Dependency: obl\n",
+      "------\n",
+      "Token: et\n",
+      "Lemma: et\n",
+      "Part of Speech: CCONJ\n",
+      "Is Stop Word: True\n",
+      "Dependency: cc\n",
+      "------\n",
+      "Token: variis\n",
+      "Lemma: uarius\n",
+      "Part of Speech: ADJ\n",
+      "Is Stop Word: False\n",
+      "Dependency: amod\n",
+      "------\n",
+      "Token: eruditionibus\n",
+      "Lemma: eruditio\n",
+      "Part of Speech: NOUN\n",
+      "Is Stop Word: False\n",
+      "Dependency: conj\n",
+      "------\n",
+      "Token: ornata\n",
+      "Lemma: orno\n",
+      "Part of Speech: VERB\n",
+      "Is Stop Word: False\n",
+      "Dependency: conj\n",
+      "------\n",
+      "Token: ,\n",
+      "Lemma: ,\n",
+      "Part of Speech: PUNCT\n",
+      "Is Stop Word: False\n",
+      "Dependency: punct\n",
+      "------\n",
+      "Token: quae\n",
+      "Lemma: qui\n",
+      "Part of Speech: PRON\n",
+      "Is Stop Word: True\n",
+      "Dependency: nsubj:pass\n",
+      "------\n",
+      "Token: ab\n",
+      "Lemma: ab\n",
+      "Part of Speech: ADP\n",
+      "Is Stop Word: True\n",
+      "Dependency: case\n",
+      "------\n",
+      "Token: ceteris\n",
+      "Lemma: ceterus\n",
+      "Part of Speech: DET\n",
+      "Is Stop Word: False\n",
+      "Dependency: amod\n",
+      "------\n",
+      "Token: artibus\n",
+      "Lemma: ars\n",
+      "Part of Speech: NOUN\n",
+      "Is Stop Word: False\n",
+      "Dependency: obl\n",
+      "------\n",
+      "Token: perficiuntur\n",
+      "Lemma: perficio\n",
+      "Part of Speech: VERB\n",
+      "Is Stop Word: False\n",
+      "Dependency: acl:relcl\n",
+      "------\n",
+      "Token: .\n",
+      "Lemma: .\n",
+      "Part of Speech: PUNCT\n",
+      "Is Stop Word: False\n",
+      "Dependency: punct\n",
+      "------\n",
+      "Token: Opera\n",
+      "Lemma: Opus\n",
+      "Part of Speech: NOUN\n",
+      "Is Stop Word: False\n",
+      "Dependency: nsubj\n",
+      "------\n",
+      "Token: ea\n",
+      "Lemma: is\n",
+      "Part of Speech: PRON\n",
+      "Is Stop Word: False\n",
+      "Dependency: det\n",
+      "------\n",
+      "Token: nascitur\n",
+      "Lemma: nascor\n",
+      "Part of Speech: VERB\n",
+      "Is Stop Word: False\n",
+      "Dependency: ROOT\n",
+      "------\n",
+      "Token: et\n",
+      "Lemma: et\n",
+      "Part of Speech: CCONJ\n",
+      "Is Stop Word: True\n",
+      "Dependency: cc\n",
+      "------\n",
+      "Token: fabrica\n",
+      "Lemma: fabrica\n",
+      "Part of Speech: NOUN\n",
+      "Is Stop Word: False\n",
+      "Dependency: conj\n",
+      "------\n",
+      "Token: et\n",
+      "Lemma: et\n",
+      "Part of Speech: CCONJ\n",
+      "Is Stop Word: True\n",
+      "Dependency: cc\n",
+      "------\n",
+      "Token: ratiocinatione\n",
+      "Lemma: ratiocinatio\n",
+      "Part of Speech: NOUN\n",
+      "Is Stop Word: False\n",
+      "Dependency: conj\n",
+      "------\n",
+      "Token: .\n",
+      "Lemma: .\n",
+      "Part of Speech: PUNCT\n",
+      "Is Stop Word: False\n",
+      "Dependency: punct\n",
+      "------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc:\n",
+    "    print(f\"Token: {token.text}\")\n",
+    "    print(f\"Lemma: {token.lemma_}\")\n",
+    "    print(f\"Part of Speech: {token.pos_}\")\n",
+    "    print(f\"Is Stop Word: {token.is_stop}\")\n",
+    "    print(f\"Dependency: {token.dep_}\")\n",
+    "    print(\"------\")"
+   ],
+   "id": "b0ea4c421ec4d82d",
+   "execution_count": 10
   },
   {
    "cell_type": "code",
